# chatservice

./: Cargo.toml  build.rs
proto/: chat.proto  pushnotifications.proto
src/: chatservice.rs  main.rs  pushnotificationsservice.rs
