[package]
name = "chatservice"
version = "0.1.0"
authors = ["edgeone <edgeone@ya.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "chatservice"
test = false
bench = false

[dependencies]
#tonic = { version = "0.3.1", features = ["tls"] }
tonic = { version = "0.4.0", features = ["tls"] }
prost = "0.7"


#==========================================================
tokio = { version = "1.1.1", features = ["rt-multi-thread", "time", "fs", "macros", "net", "sync"] }
tokio-stream = "0.1.2"
#==========================================================
#futures = "0.3.12"
futures-core = "0.3.12"
futures-executor = "0.3.12"

pickledb = "0.4.1"

[build-dependencies]
tonic-build = "0.4.0"

[profile.release]
opt-level = 'z'
lto = true # enable link time optimization

[profile.dev]
opt-level = 'z'
lto = true # disable link time optimization