[package]
name = "chatservice"
version = "1.0.0"
authors = ["edgeone <edgeone@ya.ru>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "chatservice"
test = false
bench = false

[dependencies]
tonic = { version = "0.6.0", features = ["tls"] }
prost = "0.9"


#==========================================================
tokio = { version = "1.14.0", features = ["rt-multi-thread", "time", "fs", "macros", "net", "sync"] }
tokio-stream = "0.1.8"
#==========================================================

futures-core = "0.3.17"
futures-executor = "0.3.17"

pickledb = "0.4.1"

[build-dependencies]
tonic-build = "0.6.0"

[profile.release]
opt-level = 'z'
lto = true # enable link time optimization

[profile.dev]
opt-level = 'z'
lto = true # enable link time optimization